--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url = https://u2057587464-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url= https://sentianalyzer.1ytyp0t6xz6b.us-south.codeengine.appdomain.cloud/
+backend_url=https://u2057587464-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+sentiment_analyzer_url=https://sentianalyzer.1yu2hbp8ayqb.us-south.codeengine.appdomain.cloud/
